syntax = "proto3";

import "google/protobuf/timestamp.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";
import "account-registration-service/account_registration_core.proto";

package account_registration.service.v1;
option go_package = "./pb";

enum TaskStatus {
  AllStatus = 0;
  Pending = 1;
  Draft = 2;
  Returned = 3;
  Approved = 4;
  Rejected = 5;
  DeleteRequest = 6;
  Deleted = 7;
  Cancelled = 8;
  WaitingRMVerification = 9;
  WaitingBankVerification = 10;
  WaitingBankApproval = 11;
}

enum TaskStep {
  AllStep = 0;
  Maker = 1;
  Checker = 2;
  Signer = 3;
  Releaser = 4;
}

message Participant {
  uint64 userID = 1;
  string userName = 2;
  uint64 roleID = 3;
  bool isReject = 5;
  google.protobuf.Timestamp approvedAt = 6;
  string step = 7;
}

message Participants {
  int32 approvedCount = 1;
  int32 rejectedCount = 2;
  int32 Requirement = 3;
  repeated Participant participants = 4;
}

message Flow {
  uint64 workflowLogicID = 1;
  Participants verifier = 2;
  Participants approver = 3;
  Participants releaser = 4;
  bool isRejected = 5;
  google.protobuf.Timestamp completedAt = 7;
}

message WorkflowRecords {
  google.protobuf.Timestamp lastUpdatedAt = 1;
  uint64 topRange = 2;
  uint64 bottomRange = 3;
  repeated Flow flows = 4;
}

message UserData {
  uint64 userID = 1;
  string username = 2;
}

message WorkflowHeader {
  uint64 productID = 1;
  string productName = 2;
  uint64 currencyID = 3;
  string currencyName = 5;
  uint64 companyID = 6;
  string companyName = 7;
  uint64 transactionalNumber = 10;
  uint64 workflowID = 11;
  uint64 uaID = 12; // used account id
}

message WorkflowPayload {
  WorkflowHeader header = 1;
  WorkflowRecords records = 2;
  UserData createdBy = 3;
  google.protobuf.Timestamp createdAt = 4;
  bool isDefault = 5;
  bool isTransactional = 6;
  repeated uint64 currentRoleIDs = 7;
  string currentStep = 8;
  repeated uint64 participantUserIDs = 9;
}

message ValidateWorkflowData {
  WorkflowPayload workflow = 1;
  string nextStatus = 2;
  string nextStep = 3;
}

message Task {
  uint64 taskID = 1;
  string type = 2;
  string status = 3;
  string step = 4;
  uint64 featureID = 5;
  uint64 lastApprovedByID = 6;
  uint64 lastRejectedByID = 7;
  string lastApprovedByName = 8;
  string lastRejectedByName = 9;
  string createdByName = 10;
  string updatedByName = 11;
  string reasons = 12;
  string comment = 13;
  uint64 companyID = 22;
  uint64 holdingID = 23;
  google.protobuf.Timestamp createdAt = 24;
  google.protobuf.Timestamp updatedAt = 25;
  string workflowDoc = 26;
  string Data = 27;
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string message = 1;
}

message NotificationData {
  string ACCOUNT_NUMBER = 1 [json_name='ACCOUNT_NUMBER'];
  string BANK_NAME = 2 [json_name='BANK_NAME'];
  string COMMENT = 3 [json_name='COMMENT'];
  string COMPANY_NAME = 4 [json_name='COMPANY_NAME'];
  string CREATED_DATE = 5 [json_name='CREATED_DATE'];
  string CREATED_DATETIME = 6 [json_name='CREATED_DATETIME'];
  string CREATED_TIME = 7 [json_name='CREATED_TIME'];
  string CURRENCY_NAME = 8 [json_name='CURRENCY_NAME'];
  string EVENT_DATE = 9 [json_name='EVENT_DATE'];
  string EVENT_DATETIME = 10 [json_name='EVENT_DATETIME'];
  string EVENT_TIME = 11 [json_name='EVENT_TIME'];
  string MODULE = 12 [json_name='MODULE'];
  string REASON = 13 [json_name='REASON'];
  string STATUS_ACTION = 14 [json_name='STATUS_ACTION'];
  string TASK_ID = 15 [json_name='TASK_ID'];
  string TRANSACTION_ID = 16 [json_name='TRANSACTION_ID'];
  string USERNAME_APPROVER = 17 [json_name='USERNAME_APPROVER'];
  string USERNAME_CHECKER = 18 [json_name='USERNAME_CHECKER'];
  string USERNAME_MAKER = 19 [json_name='USERNAME_MAKER'];
  string USERNAME_REJECTOR = 20 [json_name='USERNAME_REJECTOR'];
  string USERNAME_RELEASER = 21 [json_name='USERNAME_RELEASER'];
  string NEW_EXTRA_PLAFON = 22 [json_name='NEW_EXTRA_PLAFON'];
  string OLD_EXTRA_PLAFON = 23 [json_name='OLD_EXTRA_PLAFON'];
  string DESCRIPTION = 24 [json_name='DESCRIPTION'];
  string ACCOUNT_DESCRIPTION = 25 [json_name='ACCOUNT_DESCRIPTION'];
  string PLAFON = 26 [json_name='PLAFON'];
}

message DataTask{
  string cif = 1;
  uint64 companyID = 2;
  string statusCode = 3;
  string accessLevel = 4;
  string accountName = 5;
  string accountType = 6;
  string companyName = 7;
  uint64 createdByID = 8;
  string productCode = 9;
  repeated string accountAlias = 10;
  string accountNumber = 11;
  string accountStatus = 12;
  string createdByName = 13;
  string accountCurrency = 14;
  string isOwnedByCompany = 15;
  string powerOfAttorney = 16;
  string idCard = 17;
  string companyCode = 18;
  string idCardUrl = 19;
  string powerOfAttorneyUrl = 20;
  string rmEmail = 21;
  string supervisorEmail = 22;
  string branchCode = 23;
  string branchName = 24;
  string statementLetter = 25;
  string statementLetterUrl = 26;
}

message CreateAccountRequest{
  repeated DataAccount data =1;
  bool isDraft = 2;
  uint64 task_id = 3;
  repeated string alias = 4;
  string account_access_level = 5;
  string is_owned_company = 6;
  string id_card = 7;
  string power_of_attorney = 8;
  string branchCode = 9;
  string branchName = 10;
  string statementLetter = 11;
}

message DataAccount{
  string accountNumber = 1;
  repeated string alias = 2;
  string currency = 3;
  string accountType = 4;
  string accountName = 5;
  string accountAccessLevel = 6;
  string isOwnedCompany = 7;
  string accountStatus = 8;
  string accountProductCode = 9;
  string accountStatusCode = 10;
  string cif = 11;
  string powerOfAttorney = 12;
  string powerOfAttorneyUrl = 13;
  string idCard = 14;
  string idCardUrl = 15;
  string statementLetter = 16;
  string statementLetterUrl = 17;
}

message CreateAccountResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  repeated CreateAccountResData data = 4;
}

message CreateAccountResData {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  string accountNumber = 4;
}

 message GetListAccountRequest {
  int32 page = 1;
  int32 limit = 2;
  string query = 3;
  string filter = 4;
  string filter_or = 5 [json_name='filterOr'];
  string sort = 6;
  Direction dir = 7;
  bool is_history = 8;
 }

 message GetListAccountNdsRequest {
  int32 page = 1;
  int32 limit = 2;
  string query = 3;
  string filter = 4;
  string filter_or = 5 [json_name='filterOr'];
  string sort = 6;
  Direction dir = 7;
  bool is_history = 8;
  string application = 9;
 }
 
message GetListAccountResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  repeated ListAccountData data = 4;
  PaginationResponse pagination = 5;
  Summary summary = 6;
}

message GetListAccountNdsResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  repeated ListAccountNdsData data = 4;
  PaginationResponse pagination = 5;
}

message ListAccountNdsData {
  AccountData account = 1;
  DocumentData documents = 2;
  TaskDataList task = 3;
}

message ListAccountData {
  AccountData account = 1;
  DocumentData documents = 2;
  TaskDataList task = 3;
  string workflow = 4;
}

message AccountData {
  uint64 id = 1;
  string account_number = 2;
  repeated string alias = 3;
  string currency = 4;
  string account_type = 5;
  string account_access_level = 6;
  string account_name = 7;
  string is_owned_company = 8;
  string account_status = 9;
  string account_status_code = 10;
  string account_product_code = 11;
  string cif = 12;
  uint64 company_id = 13;
  string company_code = 14;
  string company_name = 15;
  string branchCode = 16;
  string branchName = 17;
}

message DocumentData {
  string power_of_attorney = 1;
  string power_of_attorney_url = 2;
  string id_card = 3;
  string id_card_url = 4;
  string statement_letter = 5;
  string statement_letter_url = 6;
}

message TaskDataList {
  uint64 task_id = 1;
  string status = 2;
  string step = 3;
  string feature_id = 4;
  string last_approved_by_name = 5;
  string last_rejected_by_name = 6;
  string created_by_name = 7;
  string updated_by_name = 8;
  string reasons = 9;
  string comment = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message Summary {
  uint64 draft = 1;
  uint64 pending = 2;
  uint64 approved = 3;
  uint64 rejected = 4;
  uint64 returned = 5;
  uint64 change_request = 6;
  uint64 request_for_delete = 7;
}

message FilterDistinctRequest {
  int32 limit = 1;
  string category = 2;
  string query = 3;
  bool is_history = 4 [json_name='isHistory'];
}

message FilterDistinctResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  repeated string data = 4;
  PaginationResponse pagination = 5;
}

message GetUrlDownloadPublicRequest {
  uint64 task_id = 1;
  Type type = 2;
}

enum Type {
  Unknown_type = 0;
  Id_card_type = 1;
  Power_of_attorney_type = 2;
  Statement_letter_type = 3;
}

message GetUrlDownloadPublicResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  string url_download = 4;
}

message DownloadTemplateRequest {
  string fileName = 1;
}

message UploadAccountRegisterFileResp {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
}

message DownloadListAccountRegistrationRequest {
  FileFormat format = 1[json_name='format'];
  string query = 2;
  string filter = 3;
  string filterOr = 4;
  string sort = 5;
  Direction dir = 6;
  bool is_history = 7;
  int32 page = 8;
  int32 limit = 9;
}

message DetailAccountRegistrationRequest {
  uint64 task_id = 1;
}

message DetailAccountRegistrationResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  ListAccountData data = 4;
}


message ActionAccountRequest{
  string otp = 1;
  string reason = 2;
  string comment = 3;
  string idToken = 4;
  string action = 5;
  string rcode = 6;
  string passCode = 7; 
  string application = 8;
  string userName = 9;
  repeated uint64 taskId = 10;
  string userCode = 11;
  string userEmail = 12; 
}

message ActionAccountResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  repeated ActionAccountResData data = 4;
}

message ActionAccountResData {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  string task_id = 4;
}

message AccountNotificationData {
  string USERNAME_MAKER = 1 [json_name='USERNAME_MAKER'];
  string USERNAME_APPROVER = 2 [json_name='USERNAME_APPROVER'];
  string CREATED_DATETIME = 3 [json_name='CREATED_DATETIME'];
  string CREATED_DATE = 4 [json_name='CREATED_DATE'];
  string CREATED_TIME = 5 [json_name='CREATED_TIME'];
  string EVENT_DATETIME = 6 [json_name='EVENT_DATETIME'];
  string EVENT_DATE = 7 [json_name='EVENT_DATE'];
  string EVENT_TIME = 8 [json_name='EVENT_TIME'];
  string ACCOUNT_NUMBER = 9 [json_name='ACCOUNT_NUMBER'];
  string ACCOUNT_ALIAS = 10 [json_name='ACCOUNT_ALIAS'];
  string ACCOUNT_ACCESS = 11 [json_name='ACCOUNT_ACCESS'];
  string ACCOUNT_OWNERSHIP = 12 [json_name='ACCOUNT_OWNERSHIP'];
  string ACCOUNT_CURRENCY = 13 [json_name='ACCOUNT_CURRENCY'];
  string TASK_ID = 14 [json_name='TASK_ID'];
  string USERNAME_REJECTOR = 15 [json_name='USERNAME_REJECTOR'];
  string COMPANY_NAME = 16 [json_name='COMPANY_NAME'];
  string MODULE = 17 [json_name='MODULE'];
  string ACCOUNT_TYPE = 18 [json_name='ACCOUNT_TYPE'];
  string BRANCH_NAME = 19 [json_name='BRANCH_NAME'];
  string REASON = 20 [json_name='REASON'];
  string COMMENT = 21 [json_name='COMMENT'];
  string ACCOUNT_NAME = 22 [json_name='ACCOUNT_NAME'];
}

message GlobalRequest {
  string request = 1;
  uint64 task_id = 2;
}

message GlobalRequestWithResCache {
  string request = 1;
  string rcode = 2;
  uint64 task_id = 3;
}